# ecs-nav

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: aws_client.rs  cli.rs  ecs.rs  main.rs
